compiler/tests/compile-error/no-main.arret
 ;~ ERROR no main! function defined in entry module